load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["confLoad.go"],
    importpath = "github.com/scionproto/scion/go/border/qos/qosConfload",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/l4:go_default_library",
    ],
)
